# clip-bold

./: README.md  pyproject.toml
data/: .gitignore
models/: .gitignore
notebooks/: 01_nii_loader.ipynb  02_mobileclip.ipynb  03_process_captions.ipynb  04_process_bold.ipynb  05_captions.ipynb  06_data.ipynb  07_train.ipynb  08_inference.ipynb  hello.txt
