[project]
name = "clip-bold"
version = "0.1.0"
description = ""
authors = [
    {name = "Huy Nguyen",email = "huy@digilab.co.uk"}
]
readme = "README.md"

requires-python = ">=3.12"
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
scipy = "^1.15.0"
mobileclip = { path = "../ml-mobileclip/", develop = false }
torch = {version = "^2.5.1", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1", source = "pytorch-gpu"}
nibabel = "^5.3.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
tqdm = "^4.67.1"
nilearn = "^0.11.1"
torchio = "^0.20.3"
pytorch-lightning = "^2.5.0.post0"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"